refs #72 collapsed menu text color contrast fix in icecream

--- a/creme/creme_core/static/icecream/creme_core/css/creme.css
+++ b/creme/creme_core/static/icecream/creme_core/css/creme.css
@@ -452,7 +452,7 @@ ul.button_list.vbox li {
     left:5px;*/
     width: 1%;
     z-index: 1;
-    color: #ffffff;
+    color: #539fc6;
     /*color: #5A90A7;*/
     margin-left: 0px;
     font-weight: bold;
